[tool.poetry]
name = "image-diff"
version = "0.1.0"
description = ""
authors = ["Andrew Ettenger <ettenger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
opencv-python = "^4.8.1.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "image-diff"
